@@ -79,6 +79,7 @@ Improved ZX Vision:
 
 * Fixes:
 
+Fixed random crash on startup on Linux when executing some network operations (check updates, check last users, send updates)
 Fixed Spectrum +3 disk emulation: TODO: add more details here
 Fixed autoload on Spectrum +3
 Fixed bug that may crash ZEsarUX when changing to a machine with bigger resolution. It seems to affect Linux and Windows but not Mac. This is a bug that has always existed (a "long life bug" XD)
